@@ -28,4 +28,4 @@ MIGRATE TO COMMON
 - DropperNode, Dropper to scenery-phet
 - BeakerNode to scenery-phet
 - ZoomButton to scenery-phet
-- toScientificNotation to phet-core
+- ScientificNotationNode to scenery-phet
